@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2004/10/03 00:12:54 tv Exp $
+# $NetBSD: Makefile,v 1.11 2004/11/18 12:46:53 hubertf Exp $
 
-DISTNAME=	spamprobe-0.9h
-PKGREVISION=	1
+DISTNAME=	spamprobe-1.0a
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=spamprobe/}
 
